# gnu_gfpoken

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  arrowpix.h  autogen.sh  barpix.h  borderpix.h  common.h  configure  configure.ac  convert.c  dialog.c  gfp.h  gfpoken.6  gfpoken.desktop  graphics.h  history.c  iconpix.h  initial.h  interface.c  logic.c  main.c  marblepix.h  markpix.h  mkinstalldirs  multi.c  tilepix.h
art/: Makefile  README  marbles.blend  mirror.xcf  mkmarbles  mktiles
debian/: README.Debian  changelog  control  copyright  gfpoken.6  gfpoken.install  gfpoken.manpages  gfpoken.menu  rules
png/: README  marbles.png.uu
