dnl Process this file with autoconf to produce a configure script.
AC_INIT(arrowpix.h)
AM_INIT_AUTOMAKE(gfpoken, 0.25)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
AM_PATH_GTK(1.2.0)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(socket strtol)

AC_OUTPUT(Makefile)
